Bug #51674
Potential race condition in robust notify
% Done:
0%
Source:
Tags:
Backport:
pacific,octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Description
Notifications can fail. This we know.
When they do, rather than repeating the update, which can lead to A-B-A style races, we should blow the object out of peer cache.
Related issues
History
#1 Updated by Adam Emerson over 1 year ago
- Status changed from Fix Under Review to Pending Backport
#2 Updated by Backport Bot over 1 year ago
- Copied to Backport #51678: octopus: Potential race condition in robust notify added
#3 Updated by Backport Bot over 1 year ago
- Copied to Backport #51679: pacific: Potential race condition in robust notify added
#4 Updated by Backport Bot over 1 year ago
- Copied to Backport #51680: nautilus: Potential race condition in robust notify added
#5 Updated by Adam Emerson over 1 year ago
- Status changed from Pending Backport to Resolved
- Backport changed from pacific,octopus,nautilus to pacific,octopus