src/rgw/services/svc_notify.h
@@ -12,6 +12,7 @@ class RGWSI_Finisher;
 
 class RGWWatcher;
 class RGWSI_Notify_ShutdownCB;
+struct RGWCacheNotifyInfo;
 
 class RGWSI_Notify : public RGWServiceInstance
 {
@@ -74,7 +75,7 @@ private:
   void _set_enabled(bool status);
   void set_enabled(bool status);
 
-  int robust_notify(RGWSI_RADOS::Obj& notify_obj, bufferlist& bl);
+  int robust_notify(RGWSI_RADOS::Obj& notify_obj, const RGWCacheNotifyInfo& bl);
 
   void schedule_context(Context *c);
 public:
@@ -91,10 +92,9 @@ public:
       virtual void set_enabled(bool status) = 0;
   };
 
-  int distribute(const string& key, bufferlist& bl);
+  int distribute(const string& key, const RGWCacheNotifyInfo& bl);
 
   void register_watch_cb(CB *cb);
 };
 
 #endif
-
